# linkerd2

./: Dockerfile-proxy  go.mod  go.sum
.github/workflows/: codecov.yml  integration.yml  integration_tests.yml  markdown.yml  policy_controller.yml  release.yml  unit_tests.yml
charts/linkerd-control-plane/templates/: destination.yaml
cli/: Dockerfile
cli/cmd/testdata/: install_controlplane_tracing_output.golden  install_custom_registry.golden  install_default.golden  install_default_override_dst_get_nets.golden  install_default_token.golden  install_ha_output.golden  install_ha_with_overrides_output.golden  install_heartbeat_disabled_output.golden  install_helm_control_plane_output.golden  install_helm_control_plane_output_ha.golden  install_helm_output_ha_labels.golden  install_helm_output_ha_namespace_selector.golden  install_no_init_container.golden  install_output.golden  install_proxy_ignores.golden  install_values_file.golden
cni-plugin/: Dockerfile
controller/: Dockerfile
jaeger/injector/: Dockerfile
policy-controller/: Cargo.toml
policy-controller/src/: admission.rs  main.rs
viz/metrics-api/: Dockerfile
viz/tap/: Dockerfile
web/: Dockerfile
web/app/: package.json
