[package]
name = "linkerd-policy-controller"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = ["native-tls"]
native-tls = ["kubert/client-native-tls"]
rustls-tls = ["kubert/client-rustls-tls"]

[dependencies]
anyhow = "1"
clap = { version = "3", default-features = false, features = ["derive", "env", "std"] }
drain = "0.1"
futures = { version = "0.3", default-features = false }
hyper = { version = "0.14", features = ["http1", "http2", "runtime", "server"] }
linkerd-policy-controller-core = { path = "./core" }
linkerd-policy-controller-grpc = { path = "./grpc" }
linkerd-policy-controller-k8s-index = { path = "./k8s/index" }
linkerd-policy-controller-k8s-api = { path = "./k8s/api" }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[dependencies.kubert]
version = "0.2.0"
git = "https://github.com/olix0r/kubert.git"
default-features = false
features = [
    "clap",
    "client",
    "log",
    "webhook",
    "v1_20",
]

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
]

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = "0.3"
